src/content/docs/versions/ts-sdk/0.2.x/inputs/rtp.mdx
---
title: RTP
sidebar:
  order: 3
slug: ts-sdk/0.2.x/ts-sdk/inputs/rtp
---

import { Aside, Badge, Code } from "@astrojs/starlight/components";
import CollapsibleDetails from "@components/CollapsibleDetails.astro";

<Badge text="Node.js" variant="tip" size="large" />

<br />

<br />

An input type that allows streaming video and audio to the Smelter server over RTP. It supports both
streaming over UDP and TCP (smelter works as a TCP server).

## Usage

```tsx title=rtpInputExample.tsx
import Smelter from "@swmansion/smelter-node";

async function run() {
  const smelter = new Smelter();
  await smelter.init();
  await smelter.registerInput("example", {
    type: "rtp_stream",
    port: 8001,
    transportProtocol: "tcp_server",
    video: { decoder: "ffmpeg_h264" },
    audio: { decoder: "opus" },
  });
  // At this point you can connect to 8001 TCP port
  // and start sending RTP traffic
}
void run();
```

## Reference

<CollapsibleDetails summaryTitle="Type definitions" open>
  ```tsx
  type RegisterRtpInput = {
    type: "rtp_stream";
    port: string | number;
    transportProtocol?: "udp" | "tcp_server";
    video?: InputRtpVideoOptions;
    audio?: InputRtpAudioOptions;
    required?: bool;
    offsetMs?: number;
  };
  ```
</CollapsibleDetails>

Parameters for registering an RTP stream as an input.

<Aside>At least one of `video` and `audio` has to be defined.</Aside>

## Properties

### port

A port number or a port range in format `START:END`. If range is specified, a port from that
range will be returned from [`registerInput`](/ts-sdk/0.2.x/smelter#registerinput).

* **Type**: `string | number`

***

### transportProtocol

Transport protocol.

* **Type**: `"udp" | "tcp_server"`
* **Supported values**:
  * `udp` - UDP protocol.
  * `tcp_server` - TCP protocol where Smelter is the server side of the connection.

***

### video

Parameters of a video included in the RTP stream.

* **Type**: [`InputRtpVideoOptions`](/ts-sdk/0.2.x/inputs/rtp#inputrtpvideooptions)

***

### audio

Parameters of an audio source included in the RTP stream.

* **Type**: [`InputRtpAudioOptions`](/ts-sdk/0.2.x/inputs/rtp#inputrtpaudiooptions)

***

### required

Determines if the input stream is essential for output frame production. If set to true and the stream is delayed, Smelter will postpone output frames until the stream is received.

* **Type**: `boolean`
* **Default value**: `false`

***

### offsetMs

Offset in milliseconds relative to the pipeline start (start request). If unspecified, the stream synchronizes based on the delivery time of the initial frames.

* **Type**: `number`

## InputRtpVideoOptions

<CollapsibleDetails summaryTitle="Type definitions" open>
  <Code
    code={`
type InputRtpVideoOptions = {
  decoder: "ffmpeg_h264" | "vulkan_video";
}
`}
    lang="tsx"
  />
</CollapsibleDetails>

Parameters of a video source included in the RTP stream.

### Properties

#### decoder

Video decoder.

* **Type**: `"ffmpeg_h264" | "vulkan_video"`
* **Supported values**:

  * `"ffmpeg_h264"` - Use the software decoder based on ffmpeg.
  * `"vulkan_video"` (<Badge text="Required feature: vk-video" variant="note" />) - Use hardware decoder based on Vulkan Video.

    This should be faster and more scalable than the ffmpeg decoder, if the hardware and OS
    support it.

    This requires hardware that supports Vulkan Video. Another requirement is this program has
    to be compiled with the `vk-video` feature enabled (enabled by default on platforms which
    support Vulkan, i.e. non-Apple operating systems and not the web).

## InputRtpAudioOptions

<CollapsibleDetails summaryTitle="Type definitions" open>
  <Code
    code={`
type InputRtpAudioOptions =
| {
    decoder: "opus";
    forwardErrorCorrection?: bool;
  }
| {
    decoder: "aac";
    audioSpecificConfig: string;
    rtpMode?: "low_bitrate" | "high_bitrate";
  }
`}
    lang="tsx"
  />
</CollapsibleDetails>

Parameters of an audio source included in the RTP stream.

### Properties (decoder: "opus")

#### forwardErrorCorrection

Specifies whether the stream uses forward error correction. It's specific for the `Opus` codec. For more information, visit <a href="https://datatracker.ietf.org/doc/html/rfc6716#section-2.1.7" target="_blank">RFC specification</a>.

* **Type**: `boolean`
* **Default value**: `false`

### Properties (decoder: "aac")

#### audioSpecificConfig

Configuration encoded in the format described in <a href="https://datatracker.ietf.org/doc/html/rfc3640#section-4.1" target="_blank">RFC 3640</a>.

* **Type**: `string`

For detailed instructions on obtaining this value, refer to the information provided in the table below:

<table>
  <thead>
    <tr>
      <th>Format/Protocol</th>
      <th>Location of AAC Specific Config (ASC)</th>
      <th>Notes</th>
    </tr>
  </thead>

  <tbody>
    <tr>
      <td>
        <strong>FFmpeg Streaming</strong>
      </td>

      <td>SDP file</td>

      <td>
        Use the <code>-sdp\_file FILENAME</code> option when streaming to a
        smelter to generate an SDP file containing the ASC.
      </td>
    </tr>

    <tr>
      <td>
        <strong>MP4 Files</strong>
      </td>

      <td>
        Inside the <code>esds</code> box
      </td>

      <td>
        The ASC is embedded as part of the <code>esds</code> box, not the entire
        box. Applies to regular MP4 and fragmented MP4s (used in HLS playlists
        with MP4 files).
      </td>
    </tr>

    <tr>
      <td>
        <strong>FLV Files / RTMP</strong>
      </td>

      <td>
        Inside the <code>AACAUDIODATA</code> tag
      </td>

      <td>
        The ASC is contained within the <code>AACAUDIODATA</code> tag.
      </td>
    </tr>
  </tbody>
</table>

#### rtpMode

Specifies the RFC 3640 mode that should be used when depacketizing this stream. For more information, visit <a href="https://datatracker.ietf.org/doc/html/rfc3640#section-3.3.1" target="_blank">RFC specification</a>

* **Type**: `"low_bitrate" | "high_bitrate"`
* **Default value**: `"high_bitrate"`
